--- a/online/templates/index.html
+++ b/online/templates/index.html
@@ -93,7 +93,7 @@
                         <hr>
                         <br>
                         <br>
-                        <a class="btn btn-primary btn-lg" href="{% url 'list' %}" role="button"
+                        <a class="btn btn-primary btn-lg" href=" " role="button"
                             style="margin-left: 450px; font-family: 'Special Elite', cursive;" data-mdb-toggle="animation"
                             data-mdb-animation-reset="true" data-mdb-animation="slide-out-right">Get Started !</a>
                     </div>
