--- a/online/templates/navbar.html
+++ b/online/templates/navbar.html
@@ -115,8 +115,8 @@
             <a class="nav-link" href=" " style="color: white; font-family: 'Special Elite', cursive; font-size: 20px;">My Polls</a>
             <a class="nav-link" href="logout/" style="color: white; font-family: 'Special Elite', cursive; font-size: 20px;">Logout</a>
             {% else %}
-            <a class="nav-link" href=" " style="color: white; font-family: 'Special Elite', cursive;">Login</a>
-            <a class="nav-link" href=" " style="color: white; font-family: 'Special Elite', cursive;">Register</a>
+            <a class="nav-link" href="{% url 'login' %}" style="color: white; font-family: 'Special Elite', cursive;">Login</a>
+            <a class="nav-link" href="{% url 'registration' %}" style="color: white; font-family: 'Special Elite', cursive;">Register</a>
             {% endif %}
         </div>
     </div>
