add registration changes

--- a/online/templates/registration/login.html
+++ b/online/templates/registration/login.html
@@ -16,16 +16,11 @@
         </div>
         <div class="panel-body">
 
-          <form  action="/accounts/login/" method="post">
+          <form method="POST" novalidate>
             {% csrf_token %}
-            {% bootstrap_form form%}
-
-            <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Login">
-            </div>
-
-            <input type="hidden" name="next" value="{{next}}">
-            <p class="container">You don't have an account? <a href="/register"> Sign Up</a></p>
+            <h2>Login</h2>
+            {{form.as_p}}
+            <input type="submit" value="Login" />
           </form>
 
         </div>
