--- a/online/templates/navbar.html
+++ b/online/templates/navbar.html
@@ -105,7 +105,7 @@
             </li>
             {% if request.user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href=" " style="color:white; font-family: 'Special Elite', cursive; font-size: 20px;">Polls</a>
+                <a class="nav-link" href="{% url 'list' %}" style="color:white; font-family: 'Special Elite', cursive; font-size: 20px;">Polls</a>
             </li>
             {% endif %}
         </ul>
@@ -116,7 +116,7 @@
             <a class="nav-link" href="logout/" style="color: white; font-family: 'Special Elite', cursive; font-size: 20px;">Logout</a>
             {% else %}
             <a class="nav-link" href="{% url 'login' %}" style="color: white; font-family: 'Special Elite', cursive;">Login</a>
-            <a class="nav-link" href="{% url 'registration' %}" style="color: white; font-family: 'Special Elite', cursive;">Register</a>
+            <a class="nav-link" href="{% url 'register' %}" style="color: white; font-family: 'Special Elite', cursive;">Register</a>
             {% endif %}
         </div>
     </div>
