--- a/online/templates/registration/base.html
+++ b/online/templates/registration/base.html
@@ -13,7 +13,12 @@
   <title>{{title}}</title>
 
   {%endif%}
-
+  {%if request.user.is_authenticated %}
+  <span>Hi {{ request.user.username | title }}</span>
+  <a href="{% url 'logout' %}">Logout</a>
+{%else%}
+  <a href="{% url 'login' %}">Login</a>
+{%endif%}
   {% block styles %}
     {% bootstrap_css %}
   {% endblock %}
