--- a/online/templates/registration/registration_form.html
+++ b/online/templates/registration/registration_form.html
@@ -1,22 +1,57 @@
 {%extends "registration/base.html"%} {% load bootstrap4 %}
 
 {% block content %}
-<form method="POST" novalidate>
-	{% csrf_token %}
-	<h2>Sign Up</h2>
-		
-	{% for field in form %}
-	<p>
-		{% if field.errors %}
-		<ul class="errorlist">
-			{% for error in field.errors %}
-			<li>{{ error }}</li>
-			{% endfor %}
-		</ul>
+<div class="container">
+	<div class="row">
+	  <!-- Empty div -->
+	  <div class="col-md-4"></div>
+	  <div class="col-md-4">
+		{% if form.errors %}
+		  <p> Some Information Might be Incorrect </p>
 		{% endif %}
-	 	{{ field.label_tag }} {{ field }}
-	</p>
-	{% endfor %}
-	<input type="submit" value="Register" />
-</form>
+		<div class="panel panel-default">
+  
+		  <div class="panel-heading">
+			<h3 class="text-center">Sign Up</h3>
+		  </div>
+		  <div class="panel-body">
+			<form method="POST" novalidate>
+				{% csrf_token %}
+				<h2>Sign Up</h2>
+					
+				{% for field in form %}
+				<p>
+					{% if field.errors %}
+					<ul class="errorlist">
+						{% for error in field.errors %}
+						<li>{{ error }}</li>
+						{% endfor %}
+					</ul>
+					{% endif %}
+					 {{ field.label_tag }} {{ field }}
+				</p>
+				{% endfor %}
+				<input type="submit" value="Register" />
+				<input type="hidden" name="next" value="{{next}}">
+            <p class="container">Already have an account? <a href="/login"> Log in</a></p>
+			</form>
+			
+  
+		  </div>
+  
+		</div>
+  
+	  </div>
+	  <!-- empty div -->
+	  <div class="col-md-4"></div>
+	</div>
+  </div>
+  
 {% endblock content%}
+
+
+
+
+
+
+
