--- a/online/templates/navbar.html
+++ b/online/templates/navbar.html
@@ -111,9 +111,9 @@
         </ul>
         <div class="navbar-nav ml-auto">
             {% if request.user.is_authenticated %}
-            <li><a class="nav-link" href="profile/" style="color: white; font-family: 'Special Elite', cursive; font-size: 20px;">Profile</a></li>
-            <a class="nav-link" href=" " style="color: white; font-family: 'Special Elite', cursive; font-size: 20px;">My Polls</a>
-            <a class="nav-link" href="logout/" style="color: white; font-family: 'Special Elite', cursive; font-size: 20px;">Logout</a>
+            <li><a class="nav-link" href="{% url 'profile' %}" style="color: white; font-family: 'Special Elite', cursive; font-size: 20px;">{{user.username}}</a></li>
+            <a class="nav-link" href="{% url 'list_by_user' %} " style="color: white; font-family: 'Special Elite', cursive; font-size: 20px;">My Polls</a>
+            <a class="nav-link" href="{% url 'logout' %}" style="color: white; font-family: 'Special Elite', cursive; font-size: 20px;">Logout</a>
             {% else %}
             <a class="nav-link" href="{% url 'login' %}" style="color: white; font-family: 'Special Elite', cursive;">Login</a>
             <a class="nav-link" href="{% url 'register' %}" style="color: white; font-family: 'Special Elite', cursive;">Register</a>
