--- a/online/templates/poll_detail.html
+++ b/online/templates/poll_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<body style=" background-image: url('https://images.unsplash.com/photo-1592461013857-97a37dafbbe7?ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8Nzl8MTA2MTE3NDl8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
+<body style=" background-image: url('https://images.unsplash.com/photo-1604065626882-47c3093bec11?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHZvdGV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
     background-size: cover;
     background-repeat:  no-repeat;">
 
