--- a/online/templates/registration/login.html
+++ b/online/templates/registration/login.html
@@ -12,16 +12,23 @@
       <div class="panel panel-default">
 
         <div class="panel-heading">
+          <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="btn btn-primary">Log In</button>
+            </li>
+            </ul>
           <h3 class="text-center">Sign In</h3>
         </div>
         <div class="panel-body">
 
           <form method="POST" novalidate>
             {% csrf_token %}
-            <h2>Login</h2>
+           
             {{form.as_p}}
-            <input type="submit" value="Login" />
+            <button type="submit" class="btn btn-success">Log In</button>
             <input type="hidden" name="next" value="{{next}}">
+            <br>
+            <br>
             <p class="container">You don't have an account? <a href="/register"> Sign Up</a></p>
           </form>
 
