--- a/online/templates/registration/registration_form.html
+++ b/online/templates/registration/registration_form.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 <div class="container">
-	<div class="row">
-	  <!-- Empty div -->
+	
+	<div class="row g-3">
+	  
 	  <div class="col-md-4"></div>
 	  <div class="col-md-4">
 		{% if form.errors %}
@@ -12,12 +13,16 @@
 		<div class="panel panel-default">
   
 		  <div class="panel-heading">
+			<ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
+				<li class="nav-item" role="presentation">
+				  <button class="btn btn-primary">Registration</button>
+				</li>
+			  </ul>
 			<h3 class="text-center">Sign Up</h3>
 		  </div>
 		  <div class="panel-body">
 			<form method="POST" novalidate>
 				{% csrf_token %}
-				<h2>Sign Up</h2>
 					
 				{% for field in form %}
 				<p>
@@ -31,8 +36,10 @@
 					 {{ field.label_tag }} {{ field }}
 				</p>
 				{% endfor %}
-				<input type="submit" value="Register" />
+				<button type="submit" class="btn btn-success">Register</button>
 				<input type="hidden" name="next" value="{{next}}">
+				<br>
+				<br>
             <p class="container">Already have an account? <a href="/login"> Log in</a></p>
 			</form>
 			
@@ -42,9 +49,13 @@
 		</div>
   
 	  </div>
-	  <!-- empty div -->
+	  
 	  <div class="col-md-4"></div>
 	</div>
+
+	
+
+	  
   </div>
   
 {% endblock content%}
