edit the styling to the home page

--- a/online/templates/index.html
+++ b/online/templates/index.html
@@ -94,14 +94,14 @@
                         <br>
                         <br>
                         <a class="btn btn-primary btn-lg" href="{% url 'list' %} " role="button"
-                            style="margin-left: 450px; font-family: 'Special Elite', cursive;" data-mdb-toggle="animation"
+                            style="font-family: 'Special Elite', cursive;" data-mdb-toggle="animation"
                             data-mdb-animation-reset="true" data-mdb-animation="slide-out-right">Get Started !</a>
                     </div>
                 </div>
             </div>
         </div>
        
-        <div class="footer-basic" style="margin-top: 400px;">
+        <div class="footer-basic" style="margin-top: 200px;">
             <footer>
                 <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-github"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-google"></i></a><a href="#"><i class="icon ion-social-pinterest"></i></a></div>
                 <ul class="list-inline">
